--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -52,4 +52,54 @@
     bottom:665px;
     left:600px; 
 }
+@media screen and (max-width:640px){
 
+    .edu-heading{
+        transform: scale(0.8);
+        left: -0.2rem;
+        top: -1rem;
+    }
+    .ex-heading{
+        transform: scale(0.8);
+        left: -0.2rem;
+        bottom: 2rem;
+    }
+
+}
+
+@media screen and (max-width: 1024px) and (min-width: 768px){
+   
+    .edu-heading{
+        transform: scale(0.8);
+        left: -3rem;
+        top: -1rem;
+    }
+    .ex-heading{
+        transform: scale(0.8);
+        left: -3rem;
+        bottom: 2rem;
+    }
+
+}
+@media screen and (max-width: 1366px) and (min-width: 1024px){
+   
+    .edu-heading{
+        transform: scale(1.2);
+        left: 1rem;
+        top: -2rem;
+    }
+    .ex-heading{
+        transform: scale(1.2);
+        left: 2rem;
+        bottom: 2rem;
+    }
+    .education{
+        height: 90vh;
+      
+    }
+    .e-heading{
+        transform: scale(1.3);
+        
+    }
+
+}
