--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -55,11 +55,27 @@
  display: none;
   }
  
-  @media screen and (max-width:480px){
+  @media screen and (max-width:640px){
     .n-list{
      display: none;
      
     }
+  }
 
-    
+  @media screen and (max-width: 1024px) and (min-width: 768px){
+   
+    .n-wrapper{
+      transform: scale(0.7);
+      left: -7rem;
+    }
+
+  }
+
+  @media screen and (max-width: 1366px) and (min-width: 1024px){
+   
+    .n-wrapper{
+      transform: scale(1);
+      left: -1rem;
+    }
+
   }
