--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -61,3 +61,24 @@
     gap: 100px;
   
 }
+@media screen and (max-width:640px){
+
+    .projects{
+        transform: scale(0.6);
+    }
+    .project-details{
+        flex-direction: column;
+    
+    }
+}
+
+@media screen and (max-width: 1024px) and (min-width: 768px){
+    .projects{
+        transform: scale(1);
+    }
+    .project-details{
+        flex-direction: column;
+    
+    }
+
+}
