--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,8 +8,12 @@
    top: 0;
    left: 0;
    width: 100%;
-   z-index: 1;
+   z-index: 10000;
     
+  }
+  .sticky{
+    color: rgb(251, 249, 249);
+    background: #670606;
   }
    
   .n-left{
@@ -18,6 +22,8 @@
     display: flex;
     gap:2rem;
     margin-left: 50px;
+    font-weight: bolder;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     
   }
   .n-name{
@@ -30,6 +36,7 @@
     align-items: center;
     justify-content: center;
     font-weight: 400;
+   
     
   }
   .n-list{
@@ -41,6 +48,8 @@
     gap:4rem;
     margin-right: 4rem;
     font-size: 20px;
+    font-weight: bolder;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     
   }
   .n-list>ul >:hover{
