--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -32,7 +32,7 @@
 .design:hover{
     transform: scale(1.3);
   z-index: 2;
-  border: 2px solid gold;
+  border: 2px solid rgb(244, 248, 249);
 
 }
 .headers{
