--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -11,20 +11,20 @@
 }
 .projects{
     border: 2px solid black;
-    width: 400px;
-    height: 400px;
-    background-color: rgb(11, 57, 82);
+    width: 420px;
+    height: 470px;
+    background:rgb(2, 47, 92) ;
     color:var(--yellow);
     align-items: center;
     text-align: center;
-    padding: 20px;
+   
     border-radius: 20px;
     margin-top: 100px;
   
 }
 .projects:hover{
-  background-color: aqua;
-  color: black;
+ 
+  color: rgb(245, 242, 242);
 }
 .project-title{
     font-size: 30px;
@@ -61,6 +61,90 @@
     gap: 100px;
   
 }
+.tools{
+    font-size: 10px;
+   background-color: azure;
+   color: black;
+    padding: 5px;
+   font-weight: 800;
+}
+.backside{
+    color: rgb(4, 4, 4);
+background-color: aliceblue;
+}
+
+
+
+.maincontainer{
+    position: relative;
+   
+
+}
+
+.thecard{
+    position: absolute;
+    width:100%;
+    height:100%;
+    transform-style: preserve-3d;
+    transition: all .5s ease;
+    
+}
+
+.thecard:hover{
+    transform: rotateY(180deg);
+   
+   
+}
+.thecard:hover .thefront{
+    transform: rotateY(0deg);
+    
+  
+}
+.thecard:hover .theback{
+    transform: rotateY(180deg);
+    position: relative;
+    
+  
+}
+.thefront{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+   
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 20px;
+}
+.theback{
+    position: absolute;
+    margin-bottom: 50px;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+   
+    color:rgb(253, 249, 249);
+    transform: rotateY(180deg);
+    text-align: center;
+    font-family: sans-serif;
+}
+
+.heading{
+    color: white;
+   font-size: 15px;
+  
+}
+.d-head{
+    font-weight: bolder;
+    font-size: 20px;
+    background: rgb(7, 29, 67);
+}
+
+.description{
+    font-size: 15px;
+}
+
+
 @media screen and (max-width:640px){
 
     .projects{
