--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -40,6 +40,19 @@
 
 }
 
+@media screen and (min-width:640px) and (max-width:768px){
+
+  .f-content{
+    transform: scale(0.8);
+  }
+  .btn{
+    transform: scale(0.8);
+    position: relative;
+    bottom: 9rem;
+  }
+
+}
+
 @media screen and (max-width: 1024px) and (min-width: 768px){
     .f-content{
         transform: scale(1);
