--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -88,21 +88,42 @@
     display: none;
   }
 }
+@media screen and (min-width:640px) and (max-width:768px){
+  .about{
+    width: 150%;
+    transform: scale(0.6);
+    position: relative;
+    left: -15rem;
+    top: 10rem;
+  }
+  .a-name{
+    transform: scale(1);
+  }
+  .description{
+    transform: scale(1);
+    width: 100%;
+    position: relative;
+    left: -0.1rem;
+  }
+  .men{
+    display: none;
+  }
+}
 
-@media screen and (max-width: 1024px) and (min-width: 768px){
+@media screen and (max-width: 868px) and (min-width: 768px){
     .about{
         width: 150%;
         transform: scale(0.7);
         position: relative;
         left: -16rem;
-        top: 10rem;
+        top: 12rem;
         height: 100vh;
         
       }
       .a-name{
         transform: scale(1.5);
         position: relative;
-        left: 14rem;
+        left: 13.7rem;
         top: 0.5rem;
       }
       .description{
@@ -119,7 +140,7 @@
       .men{
         transform: scale(1);
         bottom: 11rem;
-        left: 19rem;
+        left: 22rem;
       }
       .a-heading{
         transform: scale(1.6);
@@ -128,39 +149,223 @@
 }
 
 
-
-@media screen and (max-width: 1366px) and (min-width: 1024px){
-    .about{
-        width: 150%;
-        transform: scale(0.7);
-        position: relative;
-        left: -20rem;
-        top: 5rem;
-        
-      }
-      .a-name{
-        transform: scale(1.5);
-        position: relative;
-        left:21.5rem;
-        top: 0.5rem;
-      }
-      .description{
-        transform: scale(1.5);
-        width:70%;
-        position: relative;
-        left: 15.5rem;
-        top: 2rem;
-      }
-      .des-2{
-        top: 4rem;
-      }
-      .men{
-        transform: scale(1.5);
-        bottom: 14rem;
-        left: 21rem;
-      }
-      .a-heading{
-        transform: scale(1.3);
-      }
+@media screen and (max-width: 940px) and (min-width: 868px){
+  .about{
+      width: 150%;
+      transform: scale(0.7);
+      position: relative;
+      left: -17.5rem;
+      top: 15rem;
+      height: 100vh;
+      
+    }
+    .a-name{
+      transform: scale(1.5);
+      position: relative;
+      left: 17.6rem;
+      top: 0.5rem;
+    }
+    .description{
+      transform: scale(1.5);
+      width: 50%;
+      position: relative;
+      left: 9rem;
+      top: 2rem;
+      
+    }
+    .des-2{
+      top: 5rem;
+    }
+    .men{
+      transform: scale(1);
+      bottom: 11rem;
+      left: 27rem;
+    }
+    .a-heading{
+      transform: scale(1.6);
+    }
 
 }
+
+
+@media screen and (max-width: 1024px) and (min-width: 940px){
+  .about{
+      width: 150%;
+      transform: scale(0.7);
+      position: relative;
+      left: -20rem;
+      top: 15rem;
+      height: 100vh;
+      
+    }
+    .a-name{
+      transform: scale(1.5);
+      position: relative;
+      left: 20rem;
+      top: 0.5rem;
+    }
+    .description{
+      transform: scale(1.5);
+      width: 50%;
+      position: relative;
+      left: 11rem;
+      top: 2rem;
+      
+    }
+    .des-2{
+      top: 5rem;
+    }
+    .men{
+      transform: scale(1);
+      bottom: 11rem;
+      left: 29rem;
+    }
+    .a-heading{
+      transform: scale(1.6);
+    }
+
+}
+
+
+@media screen and (min-width: 1024px) and (max-width: 1100px){
+  .about{
+      width: 150%;
+      transform: scale(0.7);
+      position: relative;
+      left: -21rem;
+      top: 15rem;
+      height: 100vh;
+      
+    }
+    .a-name{
+      transform: scale(1.5);
+      position: relative;
+      left: 24rem;
+      top: 0.5rem;
+    }
+    .description{
+      transform: scale(1.5);
+      width: 50%;
+      position: relative;
+      left: 14rem;
+      top: 2rem;
+      
+    }
+    .des-2{
+      top: 5rem;
+    }
+    .men{
+      transform: scale(1);
+      bottom: 11rem;
+      left: 33rem;
+    }
+    .a-heading{
+      transform: scale(1.6);
+    }
+
+}
+
+
+@media screen and (min-width: 1100px) and (max-width: 1200px){
+  .about{
+      width: 150%;
+      transform: scale(0.7);
+      position: relative;
+      left: -22rem;
+      top: 15rem;
+      height: 100vh;
+      
+    }
+    .a-name{
+      transform: scale(1.5);
+      position: relative;
+      left: 24rem;
+      top: 0.5rem;
+    }
+    .description{
+      transform: scale(1.5);
+      width: 50%;
+      position: relative;
+      left: 14rem;
+      top: 2rem;
+      
+    }
+    .des-2{
+      top: 5rem;
+    }
+    .men{
+      transform: scale(1);
+      bottom: 11rem;
+      left: 36rem;
+    }
+    .a-heading{
+      transform: scale(1.6);
+    }
+
+}
+
+
+@media screen and (min-width: 1200px) and (max-width: 1366px){
+  .about{
+      width: 150%;
+      transform: scale(0.7);
+      position: relative;
+      left: -23rem;
+      top: 15rem;
+      height: 100vh;
+      
+    }
+    .a-name{
+      transform: scale(1.5);
+      position: relative;
+      left: 27rem;
+      top: 0.5rem;
+    }
+    .description{
+      transform: scale(1.5);
+      width: 50%;
+      position: relative;
+      left: 15rem;
+      top: 2rem;
+      
+    }
+    .des-2{
+      top: 5rem;
+    }
+    .men{
+      transform: scale(1);
+      bottom: 11rem;
+      left: 43rem;
+    }
+    .a-heading{
+      transform: scale(1.6);
+    }
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
