--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -65,6 +65,20 @@
 }
 
 
+@media screen and (min-width:640px) and (max-width:768px){
+    .card{
+        transform: scale(0.8);
+        left: -0.2rem;
+        top:-3rem;
+        
+    }
+    .experience{
+        left: -0.2rem;
+        bottom: -1rem;
+    }
+}
+
+
 @media screen and (max-width: 1024px) and (min-width: 768px){
     .card{
         transform: scale(1);
@@ -79,13 +93,13 @@
 }
 @media screen and (max-width: 1366px) and (min-width: 1024px){
     .card{
-        transform: scale(1.1);
+        transform: scale(1);
         left: -0.2rem;
         top:-2rem;
         
     }
     .experience{
-        left: 0.3rem;
+        left: -0rem;
         bottom: -1rem;
     }
 }
