--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -156,7 +156,30 @@ background-color: aliceblue;
     }
 }
 
+
+@media screen and (min-width:640px) and (max-width:768px){
+
+    .projects{
+        transform: scale(0.8);
+    }
+    .project-details{
+        flex-direction: column;
+    
+    }
+}
+
 @media screen and (max-width: 1024px) and (min-width: 768px){
+    .projects{
+        transform: scale(1);
+    }
+    .project-details{
+        flex-direction: column;
+    
+    }
+
+}
+
+@media screen and (max-width: 1100px) and (min-width: 1024px){
     .projects{
         transform: scale(1);
     }
